<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/connection_status"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="34dp"
        android:background="@color/black"
        android:text="@string/connection_status"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"

        >
        <Button
            android:id="@+id/buttonDiscover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"

            android:text="@string/discover_button" />

        <ImageButton
            android:id="@+id/sendButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/send_button"

            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:srcCompat="@android:drawable/ic_menu_send" />
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="393dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical">
        <!--        <ListView-->
        <!--            android:id="@+id/listView"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="20dp"-->
        <!--            />-->
        <TextView
            android:id="@+id/senderTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/sender"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/messageTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/message"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <!--        <TextView-->
        <!--            android:id="@+id/eventTxt"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="40dp"-->
        <!--            android:text="@string/event"-->
        <!--            android:textAlignment="center" />-->


        <TextView
            android:id="@+id/confidenceTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/confidence"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/peersTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/peers"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/timeTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/time"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </LinearLayout>
    <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->

<!--&lt;!&ndash;        <EditText&ndash;&gt;-->
<!--&lt;!&ndash;            android:id="@+id/editTextTypeMsg"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_width="0dp"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_marginBottom="44dp"&ndash;&gt;-->
<!--&lt;!&ndash;            android:autofillHints="message"&ndash;&gt;-->
<!--&lt;!&ndash;            android:ems="10"&ndash;&gt;-->
<!--&lt;!&ndash;            android:inputType="textPersonName"&ndash;&gt;-->
<!--&lt;!&ndash;            android:text="@string/message"&ndash;&gt;-->
<!--&lt;!&ndash;            app:layout_constraintBottom_toBottomOf="parent"&ndash;&gt;-->
<!--&lt;!&ndash;            app:layout_constraintEnd_toStartOf="@+id/sendButton"&ndash;&gt;-->
<!--&lt;!&ndash;            app:layout_constraintHorizontal_bias="0.0"&ndash;&gt;-->
<!--&lt;!&ndash;            app:layout_constraintStart_toStartOf="parent" />&ndash;&gt;-->

<!--        <ImageButton-->
<!--            android:id="@+id/sendButton"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:contentDescription="@string/send_button"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:srcCompat="@android:drawable/ic_menu_send" />-->


<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

</LinearLayout>